@@ -1,6 +1,3 @@
-import org.gradle.api.tasks.testing.logging.TestExceptionFormat
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-import org.gradle.kotlin.dsl.withType
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
@@ -26,30 +23,12 @@ dependencies {
 
     implementation(libs.slf4j)
 
-    testRuntimeOnly(libs.r2dbc.h2)
-    testRuntimeOnly(libs.r2dbc.mariadb)
-    testRuntimeOnly(libs.r2dbc.mysql)
-    testRuntimeOnly(libs.r2dbc.oracle)
-    testRuntimeOnly(libs.r2dbc.postgresql)
-    testRuntimeOnly(libs.r2dbc.sqlserver)
-    testImplementation(libs.junit)
-    testImplementation(kotlin("test-junit"))
+    compileOnly(libs.postgre)
+    compileOnly(libs.r2dbc.postgresql)
 }
 
 tasks.withType<KotlinCompile>().configureEach {
     compilerOptions {
         jvmTarget.set(JvmTarget.JVM_11)
-    }
-}
-
-tasks.withType<Test>().configureEach {
-    if (JavaVersion.VERSION_1_8 > JavaVersion.current()) {
-        jvmArgs = listOf("-XX:MaxPermSize=256m")
-    }
-
-    testLogging {
-        events.addAll(listOf(TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED))
-        showStandardStreams = true
-        exceptionFormat = TestExceptionFormat.FULL
     }
 }
